--- a/plugins/layout.css
+++ b/plugins/layout.css
@@ -2,10 +2,16 @@
     margin-top:63px;
 }
 
-.bg-color{
-    background-color: rgba(255, 255, 255, 0.829);
+.article-color{
+    background-color: rgba(255, 255, 255, 0);
 }
 
 .container{
     width: 75%
+}
+
+@media screen and (min-width:768px) {
+    .container-fluid{
+        width: 70vw;
+    }
 }
