--- a/plugins/layout.css
+++ b/plugins/layout.css
@@ -1,17 +1,17 @@
-.mt-6{
-    margin-top:63px;
+.mt-6 {
+  margin-top: 63px;
 }
 
-.article-color{
-    background-color: rgba(255, 255, 255, 0);
+.article-color {
+  background-color: rgba(255, 255, 255, 0);
 }
 
-.container{
-    width: 75%
+.container {
+  width: 75%;
 }
 
-@media screen and (min-width:768px) {
-    .container-fluid{
-        width: 70vw;
-    }
+@media screen and (min-width: 768px) {
+  .container-fluid {
+    width: 70vw;
+  }
 }
