--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -7,7 +7,12 @@
 }
 
 .container {
+  margin: 0 auto;
   width: 75%;
+}
+
+.container-fluid {
+  margin: 70px auto;
 }
 
 @media screen and (min-width: 768px) {
