--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -16,7 +16,8 @@
 /* markdown */
 
 .markdown-body h1,
-.markdown-body h2 {
+.markdown-body h2,
+.markdown-body h3 {
   padding-left: 10px;
   border-left: 3px solid #28a745;
 }
