--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -1,23 +1,17 @@
-/* outline */
-button:hover,
-button:active,
-a:hover,
-a:active {
-  outline: none;
-}
-
-a:focus,
-button:focus {
-  outline-color: #65aadd;
-}
-
 /* markdown */
 
 .markdown-body h1,
 .markdown-body h2,
 .markdown-body h3 {
-  padding-left: 10px;
+  padding: 0.4em 0.5em;
+  color: #494949;
+  background: #f4f4f4;
   border-left: 3px solid #28a745;
+}
+
+.markdown-body img {
+  padding: 5px;
+  border: 0.2px solid #28a745;
 }
 
 .markdown-body a {
